--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
