--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^7.0.1",
     "@p5-wrapper/next": "^1.0.3",
     "@p5-wrapper/react": "^4.4.0",
     "framer-motion": "^11.1.9",
@@ -17,13 +18,15 @@
     "react-dom": "^18",
     "react-parallax": "^3.5.1",
     "styled-components": "^6.1.11",
-    "typed.js": "^2.1.0"
+    "typed.js": "^2.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.10",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
